kubernetes_setup/novnc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "flask-bot-user1-service,flask-bot-user2-service,flask-bot-user3-service"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /vnc/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-bot-user1-service
            port:
              number: 6081
      - path: /user2/vnc/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-bot-user2-service
            port:
              number: 6081
      - path: /user3/vnc/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-bot-user3-service
            port:
              number: 6081
